Using IntentService to process data to SharedPreferences file, and use singleton Fragment to commit with Activity, the UI display success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">RollingBaby</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_sync">Sync</string>
 
     <string name="title_activity_temperature">Temperature</string>
     <string name="title_activity_swing">Swing</string>
