--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_music">Music</string>
     <string name="title_activity_humidity">Humidity</string>
 
+    <string name="card_playState"></string>
+
 </resources>
