--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="success_content">成功连接到您宝宝的婴儿床，可以开始使用</string>
     <string name="fail_title">连接失败</string>
     <string name="fail_content">连接婴儿床失败，请检查网络连接或婴儿床状态</string>
-    <string name="read_title">您的宝宝有动静了</string>
+    <string name="read_title">宝宝有动静了</string>
     <string name="read_content">您的宝宝有动静了，请点击查看</string>
     <string name="position_bt">检查网络设置</string>
     <string name="navigation_bt">取消</string>
