--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,24 +17,30 @@
     <string name="position_bt">检查网络设置</string>
     <string name="navigation_bt">取消</string>
     <string name="back_bt">"再按一次退出程序"</string>
-    <string name="music_toast">"音乐模式"</string>
-    <string name="story_toast">"故事机模式"</string>
     <string name="show_card">"欢迎使用\n翻滚吧，Baby\n智能婴儿床"</string>
 
-    <string name="heating"> / 升温中</string>
+    <string name="heating"> 升温中</string>
     <string name="unHeating"> </string>
-    <string name="cool_down"> / 降温中</string>
+    <string name="cool_down"> 降温中</string>
+
+    <string name="heating_main"> / 升温中</string>
+    <string name="unHeating_main"> </string>
+    <string name="cool_down_main"> / 降温中</string>
     <string name="music_mode">音乐模式</string>
     <string name="story_mode">故事机模式</string>
     <string name="play">播放中</string>
     <string name="stop">停止</string>
     <string name="open">开启</string>
     <string name="close">关闭</string>
+    
+    <string name="swing_open_tx">"摇摆已开启"</string>
+    <string name="swing_close_tx">摇摆已关闭</string>
+
+    <string name="temperature_state">状态 : </string>
+    <string name="setting_temperature">设定 : </string>
+    <string name="current_temperature">当前 : </string>
+    <string name="temperature_toast">32~34℃是最适合宝宝入睡的温度哦</string>
+
     <string name="title_activity_main">MainActivity</string>
-
-    <string name="hello_world">Hello world!</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
