--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,9 @@
     <string name="navigation_bt">等会再说</string>
     <string name="back_bt">"再按一次退出程序"</string>
 
-    <string name="heating"> 升温中</string>
-    <string name="unHeating"> </string>
-    <string name="cool_down"> 降温中</string>
+    <string name="temperature_up"> 升温中</string>
+    <string name="temperature_close"> </string>
+    <string name="temperature_down"> 降温中</string>
 
     <string name="heating_main"> / 升温中</string>
     <string name="unHeating_main"> </string>
